RESOLVED FIXED276559
Fix the watchOS build with certain SDKs
https://bugs.webkit.org/show_bug.cgi?id=276559
Summary Fix the watchOS build with certain SDKs
Abrar Rahman Protyasha
Reported 2024-07-12 16:00:24 PDT
We fix the build by allowing certain deprecated declarations.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-12 16:00:34 PDT
Abrar Rahman Protyasha
Comment 2 2024-07-12 16:05:35 PDT
EWS
Comment 3 2024-07-12 16:09:31 PDT
Committed 280927@main (303dfc79b63e): <https://commits.webkit.org/280927@main> Reviewed commits have been landed. Closing PR #30770 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.