Fix the watchOS build with certain SDKs https://bugs.webkit.org/show_bug.cgi?id=276559 rdar://131639131

Unreviewed build fix.

Fix the watchOS build by allowing certain deprecated declarations.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView takeSnapshotWithConfiguration:completionHandler:]):
* Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm:
(-[WKVideoFullScreenViewController viewDidLoad]):
* Source/WebKit/UIProcess/Inspector/ios/WKInspectorHighlightView.mm:
(-[WKInspectorHighlightView update:scale:frame:]):
* Source/WebKit/UIProcess/WKImagePreviewViewController.mm:
(-[WKImagePreviewViewController initWithCGImage:defaultActions:elementInfo:]):
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _commonInitializationWithProcessPool:configuration:]):
(-[WKContentView screenIsBeingCaptured]):
* Source/WebKit/UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKSelectPickerTableViewController tableView:didSelectRowAtIndexPath:]):
* Source/WebKit/UIProcess/ios/forms/WKFormSelectPopover.mm:
(-[WKSelectTableViewController populateCell:withItem:]):
(-[WKSelectTableViewController tableView:didSelectRowAtIndexPath:]):

Canonical link: https://commits.webkit.org/280927@main